JBIDE-1774 server startup, shutdown, and project classpath with 5.0 runtimes completed.
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@6320 a97e2381-89e5-4abb-bab3-167db6db766c